networking/virtual-service-with-delegate/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-vs
spec:
  hosts:
  - httpd-master.eastus2.cloudapp.azure.com
  gateways:
  - web-gw
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: httpd
        port:
          number: 80
  - match:
    - uri:
        exact: /portal.html
    route:
    - destination:
        host: nginx
        port:
          number: 80
